# llamaindex-demo

./: README.md  pyproject.toml
llamaindex_demo/: demo.ipynb
llamaindex_demo/data/: file_1.txt
llamaindex_demo/data/vector_index/: default__vector_store.json  docstore.json  index_store.json
